# feup-da-proj1

./: .gitignore  Armazem.cpp  Armazem.h  CMakeLists.txt  README.md  encomendas.txt  issues da1.txt  main.cpp
data/: carrinhas_teste.txt  encomendas_teste.txt  issues da1.txt
doxygen/html/: _armazem_8cpp.html  _armazem_8cpp.js  _armazem_8cpp__incl.map  _armazem_8cpp__incl.md5  _armazem_8cpp_a2e740849015ea3cd5f436167ce6e5b1c_cgraph.map  _armazem_8cpp_a2e740849015ea3cd5f436167ce6e5b1c_cgraph.md5  _armazem_8cpp_a2e740849015ea3cd5f436167ce6e5b1c_icgraph.map  _armazem_8cpp_a2e740849015ea3cd5f436167ce6e5b1c_icgraph.md5  _armazem_8cpp_a50f76aedc277cfb4a8658e78e472b167_cgraph.map  _armazem_8cpp_a50f76aedc277cfb4a8658e78e472b167_cgraph.md5  _armazem_8cpp_a50f76aedc277cfb4a8658e78e472b167_icgraph.map  _armazem_8cpp_a50f76aedc277cfb4a8658e78e472b167_icgraph.md5  _armazem_8cpp_a56e9a62f084c21936e8c002dbbe03223_cgraph.map  _armazem_8cpp_a56e9a62f084c21936e8c002dbbe03223_cgraph.md5  _armazem_8cpp_a56e9a62f084c21936e8c002dbbe03223_icgraph.map  _armazem_8cpp_a56e9a62f084c21936e8c002dbbe03223_icgraph.md5  _armazem_8cpp_a7435a1ef326c0e0e3d784cc821923743_cgraph.map  _armazem_8cpp_a7435a1ef326c0e0e3d784cc821923743_cgraph.md5  _armazem_8cpp_a7435a1ef326c0e0e3d784cc821923743_icgraph.map  _armazem_8cpp_a7435a1ef326c0e0e3d784cc821923743_icgraph.md5  _armazem_8cpp_a79fa7c0ec620cdd450abe3383888ce69_cgraph.map  _armazem_8h.html  (+158 more)
includes/: Armazem.h  Carrinha.h  Encomenda.h  Estafeta.h  FileReader.h  Menu.h
src/: Armazem.cpp  Carrinha.cpp  Encomenda.cpp  Estafeta.cpp  FileReader.cpp  Menu.cpp
(+22 files in other folders)
